# paswitch-rs

./: Cargo.toml  README.md
src/: commands.rs  interactive.rs  main.rs  paswitch.rs  pulse.rs  types.rs
src/test/data/: pactl-fiio.txt  pactl-list.txt
